# tidybib

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/tidybib/: __init__.py  biblib.py  inputfiles.py
