[project]
name = "tidybib"
version = "0.1.2"
readme = "README.md"
description = "BibTeX formatter"
authors = [
  {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"},
]
keywords = ["tex", "latex", "bibtex", "formatter"]
license = {text = "MIT License"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ntessore/tidybib"

[project.scripts]
tidybib = "tidybib:main"
